alignment fixed on body and list style type on ul added

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -39,6 +39,7 @@ overflow: hidden;
 }
 
 #ul {
+    list-style-type: none;
     overflow: hidden;
     padding: 0;
     margin: 0;
